Fixed spacing in hamburger menu.

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -133,7 +133,7 @@ footer {
   }
 
   nav li {
-    margin: 0.2rem 0;
+    margin: 0.5rem;
     text-align: center;
   }
 
